Fix top spacing

--- a/scss/abstract/_general.scss
+++ b/scss/abstract/_general.scss
@@ -130,7 +130,7 @@ body {
     display: none;
   }
   #wp--skip-link--target {
-    margin-top: 0;
+    margin-top: 0 !important;
   }
 }
 
