--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
 }
 
 .page-slug-schedule #wp--skip-link--target {
-	margin-top: 0;
+	margin-top: 0 !important;
 }
 
 @media screen and (max-width: 767px) {
